client/src/App.css
@font-face {
  font-family: 'terminus';
  src: url('./assets/fonts/Terminus.ttf');
}

@font-face {
  font-family: 'bubble';
  src: url('./assets/fonts/04B30.TTF');
}

body {
  text-align: center;
}

h1 {
  font-family: bubble;
  color: white;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
  /*-webkit-text-stroke: .5px black;*/
}

h5 {
  margin: 10px 0 4px 0;
  padding: 0;
}

@keyframes warning {
  0% {color: white;}
  50% {color: #ffcd05;}
}

p {
  font-size: .75em;
  animation: 2s infinite warning;
}

.container {
  background-color: #DBCBD8;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.container div {
  margin-bottom: 10px;
}

.box {
  color: white;
  background-color: #FE938C;
  padding: 0 15px 15px 15px;
  margin: 0 auto;
  max-width: 100%;
  border: 2px solid white;
  border-radius: 10px;
}

input {
  font-family: "Andale Mono", monospace;
  appearance: none;
  text-align:center;
  border-radius: 60px;
}

input:focus {
  outline: none;
}

button:focus {
  outline: none;
}

button {
  font-family: "Andale Mono", monospace;
  margin-top: 15px;
  /*border: 1px solid black;*/
  background-color: white;
  border-radius: 60px;
}

ul {
  display: block;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

link {
  text-decoration: none;
}

/*
colors

#DBF3FF  #9DD5F0
#E4EDF6  #C8FBF4
#EDE7ED  #BCC0ED
#F6E1E4  #DBCBD8
#FFDBDB  #E6B89C
#FE938C

*/

